--- a/local.html
+++ b/local.html
@@ -14,7 +14,7 @@
 
     <script src="./lib/requirejs/require.js"></script>
     <script>
-        require(["./dist/main"], m => m.main('myDiagramDiv'));
+        require(["./dist/main"], m => m.main('myDiagramDiv','local'));
     </script>
 </body>
 
